// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoGroup does not render its children when isCollapsed is true 1`] = `
<div
  class=""
>
  <div
    class="kuiBar kuiVerticalRhythm"
  >
    <div
      class="kuiBarSection"
    >
      <h2
        class="kuiTitle"
      />
    </div>
    <div
      class="kuiBarSection"
    >
      <button
        class="kuiCollapseButton"
      >
        <div
          class="kuiIcon fa-chevron-circle-down"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`InfoGroup renders its children by default 1`] = `
<div
  class=""
>
  <div
    class="kuiBar kuiVerticalRhythm"
  >
    <div
      class="kuiBarSection"
    >
      <h2
        class="kuiTitle"
      />
    </div>
    <div
      class="kuiBarSection"
    >
      <button
        class="kuiCollapseButton"
      >
        <div
          class="kuiIcon fa-chevron-circle-up"
        />
      </button>
    </div>
  </div>
  Info message
</div>
`;

exports[`InfoGroup renders its children when isCollapsed is false 1`] = `
<div
  class=""
>
  <div
    class="kuiBar kuiVerticalRhythm"
  >
    <div
      class="kuiBarSection"
    >
      <h2
        class="kuiTitle"
      />
    </div>
    <div
      class="kuiBarSection"
    >
      <button
        class="kuiCollapseButton"
      >
        <div
          class="kuiIcon fa-chevron-circle-up"
        />
      </button>
    </div>
  </div>
  Info Message
</div>
`;

exports[`InfoGroup renders the className property 1`] = `
<div
  class="specificInfoGroup"
>
  <div
    class="kuiBar kuiVerticalRhythm"
  >
    <div
      class="kuiBarSection"
    >
      <h2
        class="kuiTitle"
      />
    </div>
    <div
      class="kuiBarSection"
    >
      <button
        class="kuiCollapseButton"
      >
        <div
          class="kuiIcon fa-chevron-circle-up"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`InfoGroup renders the title property 1`] = `
<div
  class=""
>
  <div
    class="kuiBar kuiVerticalRhythm"
  >
    <div
      class="kuiBarSection"
    >
      <h2
        class="kuiTitle"
      >
        A different title
      </h2>
    </div>
    <div
      class="kuiBarSection"
    >
      <button
        class="kuiCollapseButton"
      >
        <div
          class="kuiIcon fa-chevron-circle-up"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`InfoGroup renders without properties 1`] = `
<div
  class=""
>
  <div
    class="kuiBar kuiVerticalRhythm"
  >
    <div
      class="kuiBarSection"
    >
      <h2
        class="kuiTitle"
      />
    </div>
    <div
      class="kuiBarSection"
    >
      <button
        class="kuiCollapseButton"
      >
        <div
          class="kuiIcon fa-chevron-circle-up"
        />
      </button>
    </div>
  </div>
</div>
`;
